# musicfy

./: .gitignore  README.md  branchInfo.txt  branchesInfo.txt
inputTerminal/inputTerminal/: CMakeLists.txt  datasender.cpp  datasender.h  main.cpp  messageencoder.cpp  messageencoder.h  splitter.cpp  splitter.h
outputTerminal/: CMakeLists.txt  canbus.cpp  canbus.h  databasereader.cpp  databasereader.h  datareader.cpp  datareader.h  main.cpp  messagedecoder.cpp  messagedecoder.h
